# muesli-bt

./: .clang-format  .cmake-format.yaml  .editorconfig  .gitignore  .webots  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.txt  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  SUPPORT.md  TODO.md  mkdocs.yml  planner-records.jsonl  vla-records.jsonl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: docs-pages.yml  linux-ci.yml  release.yml
Core/: CMakeLists.txt  atom.cpp  atom.hpp  cell.hpp  dfloat.cpp  dfloat.hpp  integer.cpp  integer.hpp  main.cpp  muesli.cpp  muesli.hpp  muexcept.hpp  nil.cpp  nil.hpp  pair.cpp  pair.hpp  string.cpp  string.hpp  symbol.cpp  symbol.hpp  token.cpp  token.hpp
Syntax/: simple  simple.cpp  simple.lxx
bench/: CMakeLists.txt  README.md  bench_config.hpp.in  main.cpp
bench/fixtures/: schedules.cpp  schedules.hpp  source_factory.cpp  source_factory.hpp  tree_factory.cpp  tree_factory.hpp
bench/harness/: allocation_tracker.cpp  allocation_tracker.hpp  csv_writer.cpp  csv_writer.hpp  metadata.cpp  metadata.hpp  runner.cpp  runner.hpp  scenario.cpp  scenario.hpp  stats.cpp  stats.hpp
bench/runtimes/: btcpp_adapter.cpp  btcpp_adapter.hpp  muesli_adapter.cpp  muesli_adapter.hpp  runtime_adapter.hpp
bench/scripts/: analyse_results.py  compare_results.py  figure_memory_gc.py  figure_tail_latency.py  run_publication_benchmarks.py  write_evidence_report.py
bench/tests/: check_analyse_results.py  check_compare_results.py  check_figure_scripts.py  test_main.cpp
bench/tests/data/analysis_sample/: aggregate_summary.csv  environment_metadata.csv
bench/tests/data/btcpp_sample/: aggregate_summary.csv  environment_metadata.csv
cmake/: muesli_btConfig.cmake.in
docs/: .gitignore  docs-coverage.md  getting-started-10min.md  getting-started-consume.md  getting-started.md  hooks.py  index.md  known-limitations.md  limitations-roadmap.md  lisp-basics.md  requirements.txt  roadmap-to-1.0.md  terminology.md  testing.md  todo.md
docs/bt/: blackboard.md  bounded-time-planning.md  cpp-crosswalk.md  intro.md  plan-action-node.md  planner-configuration.md  robot-integration.md  scheduler.md  semantics.md  syntax.md  vla-integration.md  vla-nodes.md  vla-request-response.md
docs/contracts/: README.md  compatibility.md  conformance.md  muesli-studio-integration.md  runtime-contract-v1.md  studio-compatibility-matrix.md
docs/contributing/: docs-style-guide.md
docs/diagrams/: diagrams.md
docs/evidence/: index.md  minivla-smoke-evidence.md  model-backed-async-evidence-report.md  redaction-policy.md
docs/examples/: a-star-search.md  continuous-mcts.md  cpp-nodes.md  cross-transport-flagship-comparison.md  dijkstra-pq.md  hello-bt.md  hybrid-vla-mcts.md  index.md  isaac-h1-ros2-demo-source.md  isaac-h1-ros2-demo.md  isaac-h1-ros2-hero-source.md  isaac-h1-ros2-hero.md  isaac-wheeled-ros2-showcase.md  lisp-basics.md  memoryful-sequence-demo.md  minimal-real-bt.md  planner-bt-1d.md  planner-bt-ptz.md  prm-pq.md  pybullet-epuck-goal-source.md  pybullet-epuck-goal.md  pybullet-racecar-source.md  pybullet-racecar.md  reactive-guard-demo.md  recovery-bt.md  vla-stub-bt.md  webots-epuck-goal-seeking.md  webots-epuck-goal-source.md  webots-epuck-goal-transition.md  webots-epuck-line-following-source.md  webots-epuck-line-following.md  webots-epuck-obstacle-wall-following-source.md  webots-epuck-obstacle-wall-following.md
docs/getting-oriented/: choose-your-path.md  feature-inventory.md  how-execution-works.md  observability-first.md  scheme-vs-common-lisp.md  what-is-muesli-bt.md  why-lisp-dsl.md  why-not-btcpp.md
docs/integration/: cap-motion-v1.md  cap-perception-scene-v1.md  cross-transport-comparison-protocol.md  cross-transport-flagship.md  cross-transport-shared-contract.md  env-api.md  host-capability-bt-example.md  host-capability-bundles.md  model-service-bridge.md  overview.md  ros2-backend-scope.md  ros2-flagship-source.md  ros2-tutorial.md  same-robot-strict-comparison-protocol.md  same-robot-strict-comparison.md  sensing-and-blackboard.md  vla-backend-integration-plan.md  writing-a-backend.md
docs/internals/: architecture.md  code-map.md  extending.md  gc.md  runtime-performance.md
docs/language/: builtins.md  semantics.md  syntax.md
docs/observability/: event-log.md  logging.md  planner-logging.md  profiling.md  tick-audit.md  tracing.md  vla-logging.md
docs/planning/: ilqr.md  mcts.md  mppi.md  overview.md  plan-action-node.md  planner-plan.md
docs/project/: flagship-task-contract.md  v1-direction.md
docs/releases/: index.md  v0.1.0.md  v0.2.0.md  (+7 more)
examples/: README.md
examples/webots_epuck_obstacle/controllers/muesli_epuck/: CMakeLists.txt  muesli_epuck.cpp
fixtures/: README.md
schema/: README.md  mbt.evt.v1.schema.json
schemas/: README.md
scripts/: check-docs-links.py  check-examples-runnable.py  check-mkdocs-nav.py  check-readme-links.py  check-reference-coverage.py  check-status-labels.py  check_diagram_semantic_drift.py  check_docs_snippet_freshness.py  demo-setup.sh  gen_diagrams.sh  normalise_text_files.py  render-doc-diagrams.py  setup-python-env.sh
src/: builtins.cpp  compiled_eval.cpp  compiled_eval.hpp  env.cpp  env_api.cpp  env_builtins.cpp  eval.cpp  extensions.cpp  gc.cpp  main.cpp  printer.cpp  reader.cpp  repl_support.cpp  repl_support.hpp  value.cpp
tests/: check_educational_goal_bt.py  check_flagship_compare_runs.py  check_flagship_normalise_run.py  check_flagship_same_robot_compare_runs.py  check_minivla_smoke_redaction.py  check_model_async_evidence_report.py  check_validate_trace.py  ros2_test_harness.hpp  test_main.cpp  test_model_service_bridge.cpp
tools/: gen_fixtures_event_log.cpp  muslisp_ros2_main.cpp  trace_validator.py  validate_event_log.py  validate_generated_bt_fragment.py  validate_log.py  validate_trace.py  verify_ros2_l2_artifacts.py
tools/consumer_smoketest/: CMakeLists.txt  main.cpp  ros2_main.cpp  webots_main.cpp
(+464 files in other folders)
